[package]
name = "maid_distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.0"
blsttc = "8.0.2"
csv = "1.3.0"
hex = "0.4.3"
minreq = { version = "2.11.0", features = ["https-rustls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
