[package]
name = "public_key_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.5.0"
async-std = { version = "1.8.0", features = ["attributes"] }
bitcoin = "0.31.0"
hex = "0.4.3"
secp256k1 = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
tide = "0.16.0"
